added spacing changes

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -123,20 +123,20 @@
         </section>
         <section class="member_descriptions">
             <section class="npDescription">
-                <h3>Non Profit Tier: Free</h3>
+                <p>Non Profit Tier: Free</p>
                 <p>Non profit organizations receive the same benefits as our Bronze tier members!</p>
             </section>
             <section class="bronzeDescription">
-                <h3>Bronze Tier: $100/year</h3>
+                <p>Bronze Tier: $100/year</p>
                 <p>Bronze members have access to monthly B2B meetings and trainings!</p>
             </section>
             <section class="silverDescription">
-                <h3>Silver Tier: $250/year</h3>
+                <p>Silver Tier: $250/year</p>
                 <p>Silver members have access to all Bronze tier benefits. In addition, they receive a discount on all
                     formal events.</p>
             </section>
             <section class="goldDescription">
-                <h3>Gold Tier: $500/year</h3>
+                <p>Gold Tier: $500/year</p>
                 <p>Gold members have access to all Silver tier benefits. In addition, they receive advertising discounts
                     and
                     a spotlight on the chamber's homepage.</p>
