adding in text for last step styling

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -56,12 +56,10 @@
         <section class="hero">
             <h2>City of Kaysville</h2>
             <picture class="heroimg">
-                <source media="(min-width: 1400px)"
-                srcset="images/large.webp ">
-                <source media="(min-width: 900px)"
-                srcset="images/medium.webp ">
+                <source media="(min-width: 1400px)" srcset="images/large.webp ">
+                <source media="(min-width: 900px)" srcset="images/medium.webp ">
                 <img src="images/small.webp" alt="picture of mountains">
-            </picture>    
+            </picture>
             <button>this is a button</button>
         </section>
         <!-- END -->
@@ -89,13 +87,43 @@
                 aria-label="link to more article info">Read more...</a>
         </section>
         <section class="spotlight">
-            <h2>Local Coding Group</h2>
-            <a href="https://www.facebook.com/groups/free.code.camp.layton"> <img src="images/programming.webp"
-                    alt="icon that is code" height="90" width="90"></a>
-            <h2>Kaysville Library</h2>
-            <a href="https://www.daviscountyutah.gov/library/locations/kaysville-branch">Davis County Library.</a>
-            <h2>Community Programs</h2>
-            <a href="https://www.daviscountyutah.gov/library/programs">check out more stuff here.</a>
+            <section class="spot1">
+                <h2>Local Coding Group</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum</p>
+                <a href="https://www.facebook.com/groups/free.code.camp.layton"> <img src="images/programming.webp"
+                        alt="icon that is code" height="90" width="90"></a>
+            </section>
+            <section class="spot2">
+                <h2>Kaysville Library</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum</p>
+                <a href="https://www.daviscountyutah.gov/library/locations/kaysville-branch">Davis County Library.</a>
+            </section>
+            <section class="spot3">
+                <h2>Community Programs</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum</p>
+                <a href="https://www.daviscountyutah.gov/library/programs">check out more stuff here.</a>
+            </section>
         </section>
         <section class="join">
             <h2>Join</h2>
@@ -106,7 +134,8 @@
     <footer>
         <!-- section 1 logo and address info -->
         <div class="logoInfo">
-            <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64"> <!-- this is the placeholder logo-->
+            <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+            <!-- this is the placeholder logo-->
             <p>Kaysville City Chamber of Commerce</p>
             <p>23 East Center Street</p>
             <p> Kaysville, UT 84037</p>
