fixed css spacing for spotlights, adjusted html to validate with w3

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -55,7 +55,7 @@
     <hr>
     <p><span class="label"> Days since last visit: </span><span class="nowvisit"></span></p>
 
-    <section class="pictures">
+    <div class="pictures">
         <!-- images need to be 300 x 400 pixels -->
         <figure> <img class="discover" src="https://via.placeholder.com/768x402" data-src="images/picture-1.webp"
                 width="1200" height="627" alt="">
@@ -77,7 +77,7 @@
                 width="1200" height="627" alt="">
             <figcaption>Logan Utah</figcaption>
         </figure>
-    </section>
+    </div>
     <script src="scripts/lazyload.js"></script>
     <script src="scripts/menu.js"></script>
     <script src="scripts/lastvisit.js"></script>
