--- a/chamber/index.html
+++ b/chamber/index.html
@@ -86,45 +86,24 @@
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"
                 aria-label="link to more article info">Read more...</a>
         </section>
-        <section class="spotlight">
+        <div class="spotlight">
             <section class="spot1">
                 <h2>Local Coding Group</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu
-                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum</p>
+                <p>Come join the local coding groups in the area. From simple basics with block code to more complex languages, we have you covered.</p>
                 <a href="https://www.facebook.com/groups/free.code.camp.layton"> <img src="images/programming.webp"
                         alt="icon that is code" height="90" width="90"></a>
             </section>
             <section class="spot2">
                 <h2>Kaysville Library</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu
-                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum</p>
+                <p>Need a great book to sit down and read for a while? the local library is a great place to grab a book or use a computer and sit in quiet while studying or relaxing.</p>
                 <a href="https://www.daviscountyutah.gov/library/locations/kaysville-branch">Davis County Library.</a>
             </section>
             <section class="spot3">
                 <h2>Community Programs</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu
-                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum</p>
+                <p>Looking for a great community program to volunteer for? these are the best local programs to not only join yourself, but friends and family can also join in on the fun. there is something for everyone!</p>
                 <a href="https://www.daviscountyutah.gov/library/programs">check out more stuff here.</a>
             </section>
-        </section>
+        </div>
         <section class="join">
             <h2>Join</h2>
             <h3>Discover how to join the chamber of commerce and how it will benefit your organization!</h3>
