--- a/bountiful-foods/aboutus.html
+++ b/bountiful-foods/aboutus.html
@@ -1,26 +1,41 @@
-<header class="mainHeader">
-    <div id="banner"></div>
-    <div class="headItems">
-        <!-- this is the placeholder logo-->
-        <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
-        <h1>About Us</h1>
-        <div class="socialStuff">
-            <!-- icons -->
-            <a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46"
-                    alt="link to facebook website"></a>
-            <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
-                    alt="link to linkedin website"></a>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us</title>
+</head>
+
+<body>
+    <header class="mainHeader">
+        <div id="banner"></div>
+        <div class="headItems">
+            <!-- this is the placeholder logo-->
+            <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+            <h1>About Us</h1>
+            <div class="socialStuff">
+                <!-- icons -->
+                <a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46"
+                        alt="link to facebook website"></a>
+                <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
+                        alt="link to linkedin website"></a>
+            </div>
         </div>
-    </div>
-    <!-- navigation bar -->
-    <nav class="navbar main-navigation">
+        <!-- navigation bar -->
+        <nav class="navbar main-navigation">
 
-        <button class="hamburger" onclick="toggleMenu()">&#9776;</button>
-        <ul id="primaryNav">
-            <li class="nav-item"><a href="home.html">Home</a></li>
-            <li class="nav-item"><a href="fresh.html">Fresh</a></li>
-        </ul>
+            <button class="hamburger" onclick="toggleMenu()">&#9776;</button>
+            <ul id="primaryNav">
+                <li class="nav-item"><a href="home.html">Home</a></li>
+                <li class="nav-item"><a href="fresh.html">Fresh</a></li>
+            </ul>
 
-    </nav>
-    <div class="currentDate"><span id="yearNow"></span> </div>
-</header>
+        </nav>
+        <div class="currentDate"><span id="yearNow"></span> </div>
+    </header>
+
+</body>
+
+</html>
