--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -35,7 +35,32 @@
         </nav>
         <div class="currentDate"><span id="yearNow"></span> </div>
     </header>
-
+        <!-- footer section -->
+        <footer>
+            <!-- section 1 logo and address info -->
+            <div class="logoInfo">
+                <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+                <!-- this is the placeholder logo-->
+                <p>Kaysville City Chamber of Commerce</p>
+                <p>23 East Center Street</p>
+                <p> Kaysville, UT 84037</p>
+            </div>
+    
+            <!-- section 2 email, phone, map -->
+            <div class="contactInfo">
+                <p>info@Kaysvillecc.org</p>
+                <p>Phone: 801-555-5555</p>
+                <p>&#128506; Location Map</p>
+            </div>
+    
+            <!-- bottom footer section -->
+            <div class="bottomFoot">
+                <hr>
+                <div class="footer1">&copy; <span id="year"></span> Bountiful Foods | Nick Richards | WDD 230 Final
+                    | Last Updated:<span id="modded"></span></div>
+                <script src="#"></script>
+            </div>
+        </footer>
 </body>
 
 </html>
