adding styling for header

--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="styles/mobile.css">
 </head>
 
 <body>
@@ -13,14 +14,14 @@
         <div id="banner"></div>
         <div class="headItems">
             <!-- this is the placeholder logo-->
-            <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+            <!-- <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64"> -->
             <h1>Bountiful Foods</h1>
             <div class="socialStuff">
                 <!-- icons -->
-                <a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46"
+                <!-- <a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46"
                         alt="link to facebook website"></a>
                 <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
-                        alt="link to linkedin website"></a>
+                        alt="link to linkedin website"></a> -->
             </div>
         </div>
         <!-- navigation bar -->
@@ -60,6 +61,7 @@
                     | Last Updated:<span id="modded"></span></div>
                 <script src="#"></script>
             </div>
+            <script src="scripts/menu.js"></script>
         </footer>
 </body>
 
