--- a/bountiful-foods/aboutus.html
+++ b/bountiful-foods/aboutus.html
@@ -63,6 +63,8 @@
                     | Last Updated:<span id="modded"></span></div>
                 <script src="#"></script>
             </div>
+            <script src="scripts/menu.js"></script>
+
         </footer>
 
 </body>
