--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -62,6 +62,8 @@
                     | Last Updated:<span id="modded"></span></div>
                 <script src="#"></script>
             </div>
+            <script src="scripts/menu.js"></script>
+
         </footer>
 </body>
 
