--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -39,8 +39,8 @@
         <!-- footer section -->
         <footer>
             <!-- section 1 logo and address info -->
+            <!-- <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64"> -->
             <div class="logoInfo">
-                <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
                 <!-- this is the placeholder logo-->
                 <p>Kaysville City Chamber of Commerce</p>
                 <p>23 East Center Street</p>
