adjusting display and padding

--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -14,14 +14,14 @@
         <div id="banner"></div>
         <div class="headItems">
             <!-- this is the placeholder logo-->
-            <!-- <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64"> -->
+            <img class="headImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
             <h1>Bountiful Foods</h1>
             <div class="socialStuff">
                 <!-- icons -->
-                <!-- <a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46"
+                <a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46"
                         alt="link to facebook website"></a>
                 <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
-                        alt="link to linkedin website"></a> -->
+                        alt="link to linkedin website"></a>
             </div>
         </div>
         <!-- navigation bar -->
@@ -39,7 +39,7 @@
         <!-- footer section -->
         <footer>
             <!-- section 1 logo and address info -->
-            <!-- <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64"> -->
+            <img class="footImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
             <div class="logoInfo">
                 <!-- this is the placeholder logo-->
                 <p>Kaysville City Chamber of Commerce</p>
