adding classes and form info for fresh page

--- a/bountiful-foods/aboutus.html
+++ b/bountiful-foods/aboutus.html
@@ -15,7 +15,7 @@
         <div id="banner"></div>
         <div class="headItems">
             <!-- this is the placeholder logo-->
-            <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+            <img class="headImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
             <h1>About Us</h1>
             <div class="socialStuff">
                 <!-- icons -->
@@ -42,7 +42,7 @@
         <footer>
             <!-- section 1 logo and address info -->
             <div class="logoInfo">
-                <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+                <img class="footImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
                 <!-- this is the placeholder logo-->
                 <p>Kaysville City Chamber of Commerce</p>
                 <p>23 East Center Street</p>
