--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -15,7 +15,7 @@
         <div id="banner"></div>
         <div class="headItems">
             <!-- this is the placeholder logo-->
-            <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+            <img class="headImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
             <h1>Fresh</h1>
             <div class="socialStuff">
                 <!-- icons -->
@@ -37,34 +37,79 @@
         </nav>
         <div class="currentDate"><span id="yearNow"></span> </div>
     </header>
-        <!-- footer section -->
-        <footer>
-            <!-- section 1 logo and address info -->
-            <div class="logoInfo">
-                <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
-                <!-- this is the placeholder logo-->
-                <p>Kaysville City Chamber of Commerce</p>
-                <p>23 East Center Street</p>
-                <p> Kaysville, UT 84037</p>
-            </div>
-    
-            <!-- section 2 email, phone, map -->
-            <div class="contactInfo">
-                <p>info@Kaysvillecc.org</p>
-                <p>Phone: 801-555-5555</p>
-                <p>&#128506; Location Map</p>
-            </div>
-    
-            <!-- bottom footer section -->
-            <div class="bottomFoot">
-                <hr>
-                <div class="footer1">&copy; <span id="year"></span> Bountiful Foods | Nick Richards | WDD 230 Final
-                    | Last Updated:<span id="modded"></span></div>
-                <script src="#"></script>
-            </div>
-            <script src="scripts/menu.js"></script>
+<!-- FORM -->
+<div class="mainForm firstForm">
+    <form action="thankyou.html">
+        <label for="fname">First name: </label>
+        <input type="text" id="fname" class="required" name="fname" placeholder="firstname" required>
 
-        </footer>
+        <label for="lname">Last name: </label>
+        <input type="text" name="lname" id="lname" class="required" placeholder="lastname" required>
+
+        <label for="email">Email:</label>
+        <input type="email" name="mail" id="email" class="required" placeholder="something@gmail.com" required>
+
+        <label for="mphone">Cell phone:</label>
+        <input type="tel" name="mphone" id="mphone" class="required" placeholder="(555)867-5309" required>
+
+        <p>Specialty Drink:</p>
+        <hr>
+
+        <label for="drink_1" class="memLab">Drink 1
+            <input type="radio" id="drink_1" class="drink" name="radiobutton">
+
+        </label>
+
+        <label for="drink_2" class="memLab">Drink 2
+            <input type="radio" id="drink_2" class="drink" name="radiobutton">
+
+        </label>
+
+
+        <label for="drink_3" class="memLab">Drink 3
+            <input type="radio" id="drink_3" class="drink" name="radiobutton">
+        </label>
+
+        <hr>
+
+        <label for="textarea">Business Description:
+            <textarea name="description" placeholder="Type here" id="textarea"></textarea>
+        </label>
+
+        <input type="hidden" id="hidetime" name="hidetime">
+
+        <input type="submit" value="Complete form" class="btn">
+    </form>
+</div>
+
+    <!-- footer section -->
+    <footer>
+        <!-- section 1 logo and address info -->
+        <div class="logoInfo">
+            <img class="footImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+            <!-- this is the placeholder logo-->
+            <p>Kaysville City Chamber of Commerce</p>
+            <p>23 East Center Street</p>
+            <p> Kaysville, UT 84037</p>
+        </div>
+
+        <!-- section 2 email, phone, map -->
+        <div class="contactInfo">
+            <p>info@Kaysvillecc.org</p>
+            <p>Phone: 801-555-5555</p>
+            <p>&#128506; Location Map</p>
+        </div>
+
+        <!-- bottom footer section -->
+        <div class="bottomFoot">
+            <hr>
+            <div class="footer1">&copy; <span id="year"></span> Bountiful Foods | Nick Richards | WDD 230 Final
+                | Last Updated:<span id="modded"></span></div>
+            <script src="#"></script>
+        </div>
+        <script src="scripts/menu.js"></script>
+
+    </footer>
 </body>
 
 </html>
