--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Bountiful Foods Home</title>
     <link rel="stylesheet" href="styles/mobile.css">
 </head>
 
@@ -36,33 +36,49 @@
         </nav>
         <div class="currentDate"><span id="yearNow"></span> </div>
     </header>
-        <!-- footer section -->
-        <footer>
-            <!-- section 1 logo and address info -->
-            <img class="footImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
-            <div class="logoInfo">
-                <!-- this is the placeholder logo-->
-                <p>Kaysville City Chamber of Commerce</p>
-                <p>23 East Center Street</p>
-                <p> Kaysville, UT 84037</p>
-            </div>
-    
-            <!-- section 2 email, phone, map -->
-            <div class="contactInfo">
-                <p>info@Kaysvillecc.org</p>
-                <p>Phone: 801-555-5555</p>
-                <p>&#128506; Location Map</p>
-            </div>
-    
-            <!-- bottom footer section -->
-            <div class="bottomFoot">
-                <hr>
-                <div class="footer1">&copy; <span id="year"></span> Bountiful Foods | Nick Richards | WDD 230 Final
-                    | Last Updated:<span id="modded"></span></div>
-                <script src="#"></script>
-            </div>
-            <script src="scripts/menu.js"></script>
-        </footer>
+
+    <main>
+        <div class="summaryCalif">
+            <p>San Diego California</p>
+            <p>San Diego is a city on the Pacific coast of California known for its beaches, parks and warm climate.            <iframe class="sanMap"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52604.71619832885!2d-117.15937589161861!3d32.71592166664419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d954f09f671625%3A0x71060b854cb6d77b!2sSan%20Diego%20City%20Hall!5e0!3m2!1sen!2sus!4v1670881049636!5m2!1sen!2sus"
+                style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+                Immense Balboa Park is the site of the renowned San Diego Zoo, as well as numerous art galleries, artist
+                studios, museums and gardens. A deep harbor is home to a large active naval fleet, with the USS Midway,
+                an aircraft-carrier-turned-museum, open to the public.</p>
+
+
+        </div>
+    </main>
+    <!-- footer section -->
+    <footer>
+        <!-- section 1 logo and address info -->
+        <img class="footImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+        <div class="logoInfo">
+            <!-- this is the placeholder logo-->
+            <p>San Diego City Hall</p>
+            <p>Civic Ctr Plz,</p>
+            <p> San Diego, CA 92101</p>
+        </div>
+
+        <!-- section 2 email, phone, map -->
+        <div class="contactInfo">
+            <p>info@sandiego.org</p>
+            <p>Phone: 619-236-5555</p>
+            <p>&#128506; Location Map</p>
+        </div>
+
+        <!-- bottom footer section -->
+        <div class="bottomFoot">
+            <hr>
+            <div class="footer1">&copy; <span id="year"></span> Bountiful Foods | Nick Richards | WDD 230 Final
+                | Last Updated:<span id="modded"></span></div>
+            <script src="#"></script>
+        </div>
+        <script src="scripts/menu.js"></script>
+    </footer>
 </body>
 
 </html>
