removing form item, adding picture size template

--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -40,16 +40,32 @@
     <main>
         <div class="summaryCalif">
             <p>San Diego California</p>
-            <p>San Diego is a city on the Pacific coast of California known for its beaches, parks and warm climate.            <iframe class="sanMap"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52604.71619832885!2d-117.15937589161861!3d32.71592166664419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d954f09f671625%3A0x71060b854cb6d77b!2sSan%20Diego%20City%20Hall!5e0!3m2!1sen!2sus!4v1670881049636!5m2!1sen!2sus"
-                style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+            <p>San Diego is a city on the Pacific coast of California known for its beaches, parks and warm
+                climate.<iframe class="sanMap"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52604.71619832885!2d-117.15937589161861!3d32.71592166664419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d954f09f671625%3A0x71060b854cb6d77b!2sSan%20Diego%20City%20Hall!5e0!3m2!1sen!2sus!4v1670881049636!5m2!1sen!2sus"
+                    style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
                 Immense Balboa Park is the site of the renowned San Diego Zoo, as well as numerous art galleries, artist
                 studios, museums and gardens. A deep harbor is home to a large active naval fleet, with the USS Midway,
                 an aircraft-carrier-turned-museum, open to the public.</p>
-
-
+            <picture class="pic1">
+                <source media="(min-width: 2560px)" srcset="images/large.webp "> <!-- 4k display-->
+                <source media="(min-width: 1440px)" srcset="images/large.webp "> <!-- large laptop-->
+                <source media="(min-width: 768px)" srcset="images/medium.webp "> <!-- tablet screen-->
+                <img src="images/small.webp" alt="picture of mountains"> <!-- mobile display size-->
+            </picture>
+            <picture class="pic2">
+                <source media="(min-width: 2560px)" srcset="images/large.webp "> <!-- 4k display-->
+                <source media="(min-width: 1440px)" srcset="images/large.webp "> <!-- large laptop-->
+                <source media="(min-width: 768px)" srcset="images/medium.webp "> <!-- tablet screen-->
+                <img src="images/small.webp" alt="picture of mountains"> <!-- mobile display size-->
+            </picture>
+            <picture class="pic3">
+                <source media="(min-width: 2560px)" srcset="images/large.webp "> <!-- 4k display-->
+                <source media="(min-width: 1440px)" srcset="images/large.webp "> <!-- large laptop-->
+                <source media="(min-width: 768px)" srcset="images/medium.webp "> <!-- tablet screen-->
+                <img src="images/small.webp" alt="picture of mountains"> <!-- mobile display size-->
+            </picture>
         </div>
     </main>
     <!-- footer section -->
