adding images and responsive sizes for them

--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -49,22 +49,22 @@
                 studios, museums and gardens. A deep harbor is home to a large active naval fleet, with the USS Midway,
                 an aircraft-carrier-turned-museum, open to the public.</p>
             <picture class="pic1">
-                <source media="(min-width: 2560px)" srcset="images/large.webp "> <!-- 4k display-->
-                <source media="(min-width: 1440px)" srcset="images/large.webp "> <!-- large laptop-->
-                <source media="(min-width: 768px)" srcset="images/medium.webp "> <!-- tablet screen-->
-                <img src="images/small.webp" alt="picture of mountains"> <!-- mobile display size-->
+                <source media="(min-width: 2560px)" srcset="images/coronado-bridge-san-diego-califo-LARGE.webp "> <!-- large display-->
+                <source media="(min-width: 1440px)" srcset="images/coronado-bridge-san-diego-califo-LAPTOP.webp "> <!-- laptop laptop-->
+                <source media="(min-width: 768px)" srcset="images/coronado-bridge-san-diego-califo-TABLET.webp "> <!-- tablet screen-->
+                <img src="images/coronado-bridge-san-diego-califo-MOBILE.webp" alt="picture of bridge over water" height="283" width="425"> <!-- mobile display size-->
             </picture>
             <picture class="pic2">
-                <source media="(min-width: 2560px)" srcset="images/large.webp "> <!-- 4k display-->
-                <source media="(min-width: 1440px)" srcset="images/large.webp "> <!-- large laptop-->
-                <source media="(min-width: 768px)" srcset="images/medium.webp "> <!-- tablet screen-->
-                <img src="images/small.webp" alt="picture of mountains"> <!-- mobile display size-->
+                <source media="(min-width: 2560px)" srcset="images/downtown-san-diego-bay-LARGE.webp "> <!-- large display-->
+                <source media="(min-width: 1440px)" srcset="images/downtown-san-diego-bay-LAPTOP.webp "> <!-- laptop laptop-->
+                <source media="(min-width: 768px)" srcset="images/downtown-san-diego-bay-TABLET.webp "> <!-- tablet screen-->
+                <img src="images/downtown-san-diego-bay-MOBILE.webp" alt="picture of mountains" height="283" width="425"> <!-- mobile display size-->
             </picture>
             <picture class="pic3">
-                <source media="(min-width: 2560px)" srcset="images/large.webp "> <!-- 4k display-->
-                <source media="(min-width: 1440px)" srcset="images/large.webp "> <!-- large laptop-->
-                <source media="(min-width: 768px)" srcset="images/medium.webp "> <!-- tablet screen-->
-                <img src="images/small.webp" alt="picture of mountains"> <!-- mobile display size-->
+                <source media="(min-width: 2560px)" srcset="images/San-Diego-Symphony-LARGE.webp "> <!-- large display-->
+                <source media="(min-width: 1440px)" srcset="images/San-Diego-Symphony-LAPTOP.webp "> <!-- laptop laptop-->
+                <source media="(min-width: 768px)" srcset="images/San-Diego-Symphony-TABLET.webp "> <!-- tablet screen-->
+                <img src="images/San-Diego-Symphony-MOBILE.webp" alt="picture of mountains" height="283" width="425"> <!-- mobile display size-->
             </picture>
         </div>
     </main>
