--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -14,11 +14,11 @@
         <div id="banner"></div>
         <div class="headItems">
             <!-- this is the placeholder logo-->
-            <img class="headImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+            <img class="headImg" src="images/california.webp" alt="image of a state building" height="64" width="64">
             <h1>Bountiful Foods</h1>
             <div class="socialStuff">
                 <!-- icons -->
-                <a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46"
+                <a href="https://www.facebook.com/"><img src="images/facebook.webp" height="46" width="46"
                         alt="link to facebook website"></a>
                 <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
                         alt="link to linkedin website"></a>
@@ -41,7 +41,7 @@
         <div class="summaryCalif">
             <p>San Diego California</p>
             <p>San Diego is a city on the Pacific coast of California known for its beaches, parks and warm
-                climate.<iframe class="sanMap"
+                climate.<iframe class="sanMap" title="mapOfSanDiego"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52604.71619832885!2d-117.15937589161861!3d32.71592166664419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d954f09f671625%3A0x71060b854cb6d77b!2sSan%20Diego%20City%20Hall!5e0!3m2!1sen!2sus!4v1670881049636!5m2!1sen!2sus"
                     style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
@@ -71,7 +71,7 @@
     <!-- footer section -->
     <footer>
         <!-- section 1 logo and address info -->
-        <img class="footImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+        <img class="footImg" src="images/california.webp" alt="image of a state building" height="64" width="64">
         <div class="logoInfo">
             <!-- this is the placeholder logo-->
             <p>San Diego City Hall</p>
