--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bountiful foods website final for the WDD230 class">
     <title>Bountiful Foods Home</title>
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/mobile.css">
 </head>
 
@@ -76,7 +78,7 @@
             <!-- this is the placeholder logo-->
             <p>San Diego City Hall</p>
             <p>Civic Ctr Plz,</p>
-            <p> San Diego, CA 92101</p>
+            <p>San Diego, CA 92101</p>
         </div>
 
         <!-- section 2 email, phone, map -->
@@ -90,8 +92,9 @@
         <div class="bottomFoot">
             <hr>
             <div class="footer1">&copy; <span id="year"></span> Bountiful Foods | Nick Richards | WDD 230 Final
-                | Last Updated:<span id="modded"></span></div>
-            <script src="#"></script>
+                | Last Updated:<span id="modded"></span>
+            </div>
+            <!-- <script src="#"></script> -->
         </div>
         <script src="scripts/menu.js"></script>
     </footer>
