adding image and alt text

--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -60,14 +60,24 @@
                 <source media="(min-width: 2560px)" srcset="images/downtown-san-diego-bay-LARGE.webp "> <!-- large display-->
                 <source media="(min-width: 1440px)" srcset="images/downtown-san-diego-bay-LAPTOP.webp "> <!-- laptop laptop-->
                 <source media="(min-width: 768px)" srcset="images/downtown-san-diego-bay-TABLET.webp "> <!-- tablet screen-->
-                <img src="images/downtown-san-diego-bay-MOBILE.webp" alt="picture of mountains" height="283" width="425"> <!-- mobile display size-->
+                <img src="images/downtown-san-diego-bay-MOBILE.webp" alt="picture of a ship harbor during the day" height="283" width="425"> <!-- mobile display size-->
             </picture>
             <picture class="pic3">
                 <source media="(min-width: 2560px)" srcset="images/San-Diego-Symphony-LARGE.webp "> <!-- large display-->
                 <source media="(min-width: 1440px)" srcset="images/San-Diego-Symphony-LAPTOP.webp "> <!-- laptop laptop-->
                 <source media="(min-width: 768px)" srcset="images/San-Diego-Symphony-TABLET.webp "> <!-- tablet screen-->
-                <img src="images/San-Diego-Symphony-MOBILE.webp" alt="picture of mountains" height="283" width="425"> <!-- mobile display size-->
+                <img src="images/San-Diego-Symphony-MOBILE.webp" alt="picture of outdoor theater at night" height="283" width="425"> <!-- mobile display size-->
             </picture>
+        </div>
+        <div class="freshAd">
+            <p>Want to try a local fruit smoothie?</p>
+            <picture class="pic4 drinkAd">
+                <source media="(min-width: 2560px)" srcset="images/pexels-valeriia-miller-LARGE.webp "> <!-- large display-->
+                <source media="(min-width: 1440px)" srcset="images/pexels-valeriia-miller-LAPTOP.webp "> <!-- laptop laptop-->
+                <source media="(min-width: 768px)" srcset="images/pexels-valeriia-miller-TABLET.webp "> <!-- tablet screen-->
+                <img src="images/pexels-valeriia-miller-MOBILE.webp" alt="picture of a fruit parfet" height="283" width="425"> <!-- mobile display size-->
+            </picture>
+
         </div>
     </main>
     <!-- footer section -->
