--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -75,9 +75,38 @@
                 <source media="(min-width: 2560px)" srcset="images/pexels-valeriia-miller-LARGE.webp "> <!-- large display-->
                 <source media="(min-width: 1440px)" srcset="images/pexels-valeriia-miller-LAPTOP.webp "> <!-- laptop laptop-->
                 <source media="(min-width: 768px)" srcset="images/pexels-valeriia-miller-TABLET.webp "> <!-- tablet screen-->
-                <img src="images/pexels-valeriia-miller-MOBILE.webp" alt="picture of a fruit parfet" height="283" width="425"> <!-- mobile display size-->
+                <img src="images/pexels-valeriia-miller-MOBILE.webp" alt="picture of a fruit parfet" height="567" width="425"> <!-- mobile display size-->
             </picture>
-
+        </div>
+        <div class="weather weather1">
+            <h2></h2>
+            <figure>
+                <img src="#" alt="#" id="weather-icon">
+                <figcaption></figcaption>
+            </figure>
+            <p>Current Temperature: <span id="current-temp"></span></p>
+            <p>wind speed: <span id="wind-speed"></span></p>
+            <p>wind chill: <span id="wind-chill"></span></p>
+        </div>
+        <div class="weather weather2">
+            <h2></h2>
+            <figure>
+                <img src="#" alt="#" id="weather-icon">
+                <figcaption></figcaption>
+            </figure>
+            <p>Current Temperature: <span id="current-temp"></span></p>
+            <p>wind speed: <span id="wind-speed"></span></p>
+            <p>wind chill: <span id="wind-chill"></span></p>
+        </div>
+        <div class="weather weather3">
+            <h2></h2>
+            <figure>
+                <img src="#" alt="#" id="weather-icon">
+                <figcaption></figcaption>
+            </figure>
+            <p>Current Temperature: <span id="current-temp"></span></p>
+            <p>wind speed: <span id="wind-speed"></span></p>
+            <p>wind chill: <span id="wind-chill"></span></p>
         </div>
     </main>
     <!-- footer section -->
