adding more weather items to templates

--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -79,34 +79,34 @@
             </picture>
         </div>
         <div class="weather weather1">
-            <h2></h2>
+            <p></p> <!--DAY-->
             <figure>
-                <img src="#" alt="#" id="weather-icon">
-                <figcaption></figcaption>
+                <img src="#" alt="#" class="weather-icon">
+                <figcaption></figcaption> <!--description of image-->
             </figure>
-            <p>Current Temperature: <span id="current-temp"></span></p>
-            <p>wind speed: <span id="wind-speed"></span></p>
-            <p>wind chill: <span id="wind-chill"></span></p>
+            <p>Current Temperature: <span class="current-temp"></span></p> <!--current temp-->
+            <p>Humidity: <span class="humid"></span></p> <!--humidity-->
+            <p>Condition: <span class="condition"></span></p> <!--condition description-->
         </div>
         <div class="weather weather2">
-            <h2></h2>
+            <p></p> <!--DAY-->
             <figure>
-                <img src="#" alt="#" id="weather-icon">
-                <figcaption></figcaption>
+                <img src="#" alt="#" class="weather-icon">
+                <figcaption></figcaption> <!--description of image-->
             </figure>
-            <p>Current Temperature: <span id="current-temp"></span></p>
-            <p>wind speed: <span id="wind-speed"></span></p>
-            <p>wind chill: <span id="wind-chill"></span></p>
+            <p>Current Temperature: <span class="current-temp"></span></p> <!--current temp-->
+            <p>Humidity: <span class="humid"></span></p> <!--humidity-->
+            <p>Condition: <span class="condition"></span></p> <!--condition description-->
         </div>
         <div class="weather weather3">
-            <h2></h2>
+            <p></p> <!--DAY-->
             <figure>
-                <img src="#" alt="#" id="weather-icon">
-                <figcaption></figcaption>
+                <img src="#" alt="#" class="weather-icon">
+                <figcaption></figcaption> <!--description of image-->
             </figure>
-            <p>Current Temperature: <span id="current-temp"></span></p>
-            <p>wind speed: <span id="wind-speed"></span></p>
-            <p>wind chill: <span id="wind-chill"></span></p>
+            <p>Current Temperature: <span class="current-temp"></span></p> <!--current temp-->
+            <p>Humidity: <span class="humid"></span></p> <!--humidity-->
+            <p>Condition: <span class="condition"></span></p> <!--condition description-->
         </div>
     </main>
     <!-- footer section -->
